--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,4 +22,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: llorllale/pdd-docker:latest,llorllale/pdd-docker:${{ steps.vars.outputs.tag }}
+          tags:
+            - llorllale/pdd-docker:latest
+            - llorllale/pdd-docker:${{ steps.vars.outputs.tag }}
