--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,8 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
       - name: Version
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+        run:  echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+        id: version
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -22,6 +23,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags:
-            - llorllale/pdd-docker:latest
-            - llorllale/pdd-docker:${{ steps.vars.outputs.tag }}
+          tags: llorllale/pdd-docker:latest,llorllale/pdd-docker:${{ steps.version.outputs.tag }}
