--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,3 +24,10 @@ jobs:
         with:
           push: true
           tags: llorllale/pdd-docker:latest,llorllale/pdd-docker:${{ steps.version.outputs.tag }}
+      - name: Docker Hub Description
+        uses: peter-evans/dockerhub-description@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PWD }}
+          repository: llorllale/pdd-docker
+          short-description: Puzzle Driven Programming CLI
